<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UpStopwatch</string>
    <string name="menu_settings">Settings</string>
    <string name="label_realTime">Tempo Real</string>
    <string name="label_fakeTime">Tempo Falso</string>
    <string name="init_minute">00</string>
    <string name="init_second">00</string>
    <string name="init_miliseconds">000</string>
    <string name="lbl_minutes">m</string>
    <string name="lbl_seconds">s</string>
    <string name="app_settings">Configurações</string>
    <string name="lbl_plus">+</string>
    <string name="lbl_less">-</string>
    <string name="check_alarm">Emitir alarme ao terminar</string>
    <string name="lbl_minutes2">\'</string>
    <string name="lbl_seconds2">\'\'</string>

</resources>