<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000">
    
    <TextView
        android:id="@+id/lb_realTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="15dip"
        android:text="@string/label_realTime"
        android:textColor="#fff"
        android:textSize="25sp" />
    
    <EditText 
        android:id="@+id/vl_realMinTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_realTime"
        android:ems="1"
        android:inputType="number"
        android:singleLine="true"
        android:text="@string/init_minute"
        android:textColor="#fff"
        android:textSize="60sp"
        android:layout_marginTop="25dip"
        android:layout_marginLeft="15dip"
        android:maxLength="2"
        android:background="@drawable/text_edit">
    </EditText>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_minutes2"
        android:textColor="#fff"
        android:layout_below="@+id/lb_realTime"
        android:layout_toRightOf="@+id/vl_realMinTime"
        android:layout_marginTop="10dip"
        android:textSize="90sp"
        />
    
    <Button
        android:id="@+id/btPlusMinRealTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_realTime"
        android:layout_marginLeft="15dip"
        android:text="@string/lbl_plus"
        android:textSize="30sp"
        android:textColor="@color/plus_button_interaction" />
    
    <Button
        android:id="@+id/btLessMinRealTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vl_realMinTime"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="-35dip"
        android:text="@string/lbl_less"
        android:textSize="30sp"
        android:textColor="@color/less_button_interaction" />
    
    <TextView
        android:id="@+id/lb_fakeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="15dip"
        android:layout_below="@+id/btLessMinRealTime"
        android:text="@string/label_fakeTime"
        android:textColor="#fff"
        android:textSize="25sp" />
    
    <Button
        android:id="@+id/btLessMinFakeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_fakeTime"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="10dip"
        android:text="@string/lbl_less"
        android:textSize="30sp"
        android:textColor="@color/less_button_interaction" />
        
    <EditText
        android:id="@+id/vl_fakeMinTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_fakeTime"
        android:layout_toRightOf="@+id/btLessMinFakeTime"
        android:ems="1"
        android:inputType="number"
        android:singleLine="true"
        android:text="@string/init_minute"
        android:textColor="#fff"
        android:textSize="30sp"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:maxLength="2"
        android:background="@drawable/text_edit">
    </EditText>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_minutes2"
        android:textColor="#fff"
        android:layout_below="@+id/lb_fakeTime"
        android:layout_toLeftOf="@+id/btPlusMinFakeTime"
        android:layout_marginTop="10dip"
        android:textSize="40sp"
        />
    
    <Button
        android:id="@+id/btPlusMinFakeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_fakeTime"
        android:layout_toRightOf="@+id/vl_fakeMinTime"
        android:layout_marginTop="10dip"
        android:text="@string/lbl_plus"
        android:textSize="30sp"
        android:textColor="@color/plus_button_interaction" />
    
    <CheckBox 
        android:id="@+id/chAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btLessMinFakeTime"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="15dip"
        android:text="@string/check_alarm"
        android:textColor="#fff"
        android:paddingRight="30dip" />
    
    <TextView 
        android:id="@+id/soundSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chAlarm"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="15dip"
        android:textColor="#fff" />
    
</RelativeLayout>
